--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
     "install": "cd client && yarn install",
     "build": "cd client && yarn run build",
     "heroku-postbuild": "npm run build"
-},
+  },
   "repository": "https://github.com/novakjason/fluffy-sniffer.git",
   "author": "Jason Novak <novak.jason7@gmail.com>, Dylan Vavra <vavradylan@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0",
     "nodemon": "^2.0.2"
-},
+  },
   "dependencies": {
+    "@emotion/core": "^10.0.27",
     "aws-sdk": "^2.614.0",
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "if-env": "^1.0.4",
+    "react-router-dom": "^5.1.2",
+    "react-spinners": "^0.8.0"
   }
 }
