--- a/package.json
+++ b/package.json
@@ -23,9 +23,15 @@
     "@emotion/core": "^10.0.27",
     "aws-sdk": "^2.614.0",
     "axios": "^0.19.2",
+    "bcrypt": "^3.0.8",
+    "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "if-env": "^1.0.4",
+    "mongoose": "^5.9.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "react-router-dom": "^5.1.2",
     "react-spinners": "^0.8.0"
   }
