--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "fluffy-sniffer",
   "version": "1.0.0",
   "engines": {
-    "yarn": "2.0.0"
+    "yarn": "1.22.0"
   },
   "description": "Tracks changes on specified websites and notifies user of changes.",
   "main": "server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && yarn start:prod || yarn start:dev",
     "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"yarn client\"",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"yarn run client\"",
     "client": "cd client && yarn start",
     "install": "cd client && yarn",
     "build": "cd client && yarn run build",
